package fr.inria.diverse.model;

public abstract class SnapshotChild{
} // SnapshotChild
