@startuml need_to_find_id

    interface SnapshotChild
    interface DirectoryChild


    class Content {
        + swhid : String
        + length : String
        + status : String
    
    }
    class Directory {
        +swhid : String
    }

    Directory "1" *-- "*" DirectoryEntry
    class DirectoryEntry {
        + name : String

    }
    DirectoryEntry "*" --> "1" DirectoryChild
    class Revision {
        +swhid : String
        +message : String
        +author : String
        +date : DateTime
        +committer : String
        +committerDate : DateTime
    }
    Revision "*" --> "1" Directory

    class Release {
        +swhid : String
        + date : DateTime
        + author : String
        + name : String
        + message : String
    
    }
    Revision "*" <-- "1" Release
    class SnapshotBranch {
      + name : String
    }
    SnapshotBranch "*" --> "1" SnapshotChild
    class Snapshot {
    +swhid : String
    }
    Snapshot "1" *-- "*" SnapshotBranch

    class Origin {
        +swhid : String
        +origin : String
    }
    Origin "*" --> "*" Snapshot

    SnapshotChild <|-- Release

    SnapshotChild <|-- Revision

    DirectoryChild <|-- Directory
        DirectoryChild <|-- Revision

    DirectoryChild <|-- Content



@enduml